<resources>
    <string name="app_name">Central Park App</string>
    <!--    <string name="fragment_home">Inicio</string>-->
    <string name="fragment_cart">Carrito de Compras</string>
    <string name="fragment_discover">Fragment Discover</string>
    <string name="fragment_wish_list"><b>Lista de deseos</b></string>
    <string name="fragment_profile">Fragment Profile</string>

    <!--    Home Strings-->
    <string name="search">Buscar</string>
    <string name="popularProductsTittle"><b>Populares Populares</b></string>
    <string name="bannerStockOut">BannerStockOut</string>
    <string name="ImageItem1">Item1</string>
    <string name="textItem1">PC Gamer</string>
    <string name="priceItem1">1.560.000 $</string>
    <string name="ImageItem2">Item2</string>
    <string name="textItem2">Portatil AsusRog</string>
    <string name="priceItem2">1.860.000 $</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_sellers"><b>Productos Disponibles</b></string>
    <string name="title_category"><b>Categorias</b></string>
    <string name="email_login">Correo Electronico</string>
    <string name="item_1"><b>PC Gamer</b></string>
    <string name="item_2"><b>Portatil AsusRog</b></string>
    <string name="item_3"><b>Xbox One S</b></string>
    <string name="no_items_cart"><b>¡ NO HAY PRODUCTOS EN EL CARRITO !</b></string>
    <string-array name="cantidades">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string name="logout">Cerrar Sesión</string>

</resources>